--- a/TradeMaster6000/Client/Pages/RequestUrl.razor
+++ b/TradeMaster6000/Client/Pages/RequestUrl.razor
@@ -11,7 +11,23 @@
 @{
     if (LogInStatus == null)
     {
-        <p>wait for api login status...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
+        <p>logging in... wait for api login status please...</p>
     }
     else
     {
