--- a/TradeMaster6000/Client/Pages/OrderHistory.razor
+++ b/TradeMaster6000/Client/Pages/OrderHistory.razor
@@ -7,21 +7,35 @@
 @implements IAsyncDisposable
 @attribute [Authorize]
 
-<RadzenDataGrid @ref="ordersGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
-                Data="@orders" TItem="TradeOrder">
-    <Columns>
-        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="Id" Title="Id" Filterable="false" Sortable="false" TextAlign="TextAlign.Center">
-            <Template Context="data">
-                <RadzenButton ButtonStyle="ButtonStyle.Info" Click=@(() => GoToOrder(data.Id)) Text="Go To" />
-            </Template>
-        </RadzenDataGridColumn>
-        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="TradingSymbol" Title="Trading Symbol" />
-        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="TransactionType" Title="Transaction Type" />
-        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="Entry" Title="Entry" />
-        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="Quantity" Title="Quantity" />
-        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="Status" Title="Status" />
-    </Columns>
-</RadzenDataGrid>
+@{ if (IsConnected)
+    {
+        <div class="row">
+            <div class="col-lg-12">
+                <RadzenDataGrid @ref="ordersGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
+                                Data="@orders" TItem="TradeOrder">
+                    <Columns>
+                        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="Id" Title="Id" Filterable="false" Sortable="false" TextAlign="TextAlign.Center">
+                            <Template Context="data">
+                                <RadzenButton ButtonStyle="ButtonStyle.Info" Click=@(() => GoToOrder(data.Id)) Text="Go To" />
+                            </Template>
+                        </RadzenDataGridColumn>
+                        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="TradingSymbol" Title="Trading Symbol" />
+                        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="TransactionType" Title="Transaction Type" />
+                        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="Entry" Title="Entry" />
+                        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="Quantity" Title="Quantity" />
+                        <RadzenDataGridColumn Width="100px" TItem="TradeOrder" Property="Status" Title="Status" />
+                    </Columns>
+                </RadzenDataGrid>
+            </div>
+        </div>
+    }
+            else
+            {
+                <h3>Connecting...</h3>
+            }
+}
+
+
 
 @code {
     RadzenDataGrid<TradeOrder> ordersGrid;
