--- a/TradeMaster6000/Client/Shared/NavMenu.razor
+++ b/TradeMaster6000/Client/Shared/NavMenu.razor
@@ -8,13 +8,13 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="orders">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Orders
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="orders">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Orders
+            <NavLink class="nav-link" href="createorder">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Create order
             </NavLink>
         </li>
         <li class="nav-item px-3">
