--- a/TradeMaster6000/Server/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/TradeMaster6000/Server/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,7 +1,7 @@
-﻿@page
+﻿@*@page
 @model ConfirmEmailModel
 @{
     ViewData["Title"] = "Confirm email";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>@ViewData["Title"]</h1>*@
