--- a/TradeMaster6000/Server/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/TradeMaster6000/Server/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@*@page
 @model RegisterConfirmationModel
 @{
     ViewData["Title"] = "Register confirmation";
@@ -19,4 +19,4 @@
         Please check your email to confirm your account.
 </p>
     }
-}
+}*@
