--- a/TradeMaster6000/Client/Pages/CreateOrder.razor
+++ b/TradeMaster6000/Client/Pages/CreateOrder.razor
@@ -70,7 +70,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 float-md-left">
+                    <div class="col-md-6 float-md-left padding-top">
                         <RadzenButton ButtonType="ButtonType.Submit" Text="Submit" Style="margin-bottom: 20px; width: 150px; margin: auto;" />
                     </div>
                 </EditForm>
