--- a/TradeMaster6000/Client/Pages/OrderDetails.razor
+++ b/TradeMaster6000/Client/Pages/OrderDetails.razor
@@ -10,7 +10,7 @@
 @{ if (IsConnected)
     {
         <div class="row">
-            <div class="col-xl-6">
+            <div class="col-lg-4 padding-top">
                 <h3>Trading Symbol</h3>
                 <RadzenTextBox Value="@TradeOrder.TradingSymbol" />
                 <h3>Transaction Type</h3>
@@ -26,7 +26,7 @@
                 <h3>Status</h3>
                 <RadzenTextBox Value="@TradeOrder.Status.ToString()" />
             </div>
-            <div class="col-xl-6">
+            <div class="col-lg-8 padding-top">
                 <RadzenDataGrid @ref="ordersGrid" AllowFiltering="true" AllowPaging="true" PageSize="10" AllowSorting="true"
                                 Data="@tradeLogs" TItem="TradeLog">
                     <Columns>
@@ -36,8 +36,8 @@
                 </RadzenDataGrid>
             </div>
         </div>
-        <div class="row">
-            <div class="col-xl-6">
+        <div class="row padding-top">
+            <div class="col-lg-4">
                 <h3>Entry order id</h3>
                 <RadzenTextBox Value="@TradeOrder.EntryId" />
                 <h3>Entry status</h3>
@@ -51,7 +51,7 @@
                 <h3>Target status</h3>
                 <RadzenTextBox Value="@TradeOrder.TargetStatus" />
             </div>
-            <div class="col-xl-6">
+            <div class="col-lg-8">
                 <h3>Entry quantity</h3>
                 <RadzenTextBox Value="@TradeOrder.Quantity.ToString()" />
                 <h3>Entry quantity filled</h3>
@@ -60,6 +60,8 @@
                 <RadzenTextBox Value="@TradeOrder.Target.ToString()" />
                 <h3>Is pre slm cancelled</h3>
                 <RadzenTextBox Value="@TradeOrder.PreSLMCancelled.ToString()" />
+                <h3>Is regular slm placed</h3>
+                <RadzenTextBox Value="@TradeOrder.RegularSlmPlaced.ToString()" />
             </div>
         </div>
     }
@@ -101,8 +103,8 @@
 
         await hubConnection.StartAsync();
 
-        await GetOrder();
         await GetLogs();
+        await Task.Run(()=>GetOrder()).ConfigureAwait(false);
     }
 
     private async Task GetLogs()
@@ -114,14 +116,13 @@
     private async Task GetOrder()
     {
         int.TryParse(OrderId, out int orderId);
-        await Task.Run(async () =>
+
+        while (IsConnected)
         {
-            while (IsConnected)
-            {
-                await hubConnection.SendAsync("GetOrder", orderId);
-                await Task.Delay(5000);
-            }
-        }).ConfigureAwait(false);
+            await hubConnection.SendAsync("GetOrder", orderId);
+            await Task.Delay(5000);
+        }
+
     }
 
     public bool IsConnected =>
