--- a/TradeMaster6000/Client/Pages/OrderDetails.razor
+++ b/TradeMaster6000/Client/Pages/OrderDetails.razor
@@ -15,14 +15,14 @@
                 <RadzenTextBox Value="@TradeOrder.TradingSymbol" />
                 <h3>Transaction Type</h3>
                 <RadzenTextBox Value="@TradeOrder.TransactionType.ToString()" />
-                <h3>Entry</h3>
-                <RadzenTextBox Value="@TradeOrder.Entry.ToString()" />
-                <h3>Stop loss</h3>
-                <RadzenTextBox Value="@TradeOrder.StopLoss.ToString()" />
+                <h3>Exit Transaction Type</h3>
+                <RadzenTextBox Value="@TradeOrder.ExitTransactionType" />
                 <h3>Risk</h3>
                 <RadzenTextBox Value="@TradeOrder.Risk.ToString()" />
                 <h3>R:R</h3>
                 <RadzenTextBox Value="@TradeOrder.RxR.ToString()" />
+                <h3>Zone Width</h3>
+                <RadzenTextBox Value="@TradeOrder.ZoneWidth.ToString()" />
                 <h3>Status</h3>
                 <RadzenTextBox Value="@TradeOrder.Status.ToString()" />
             </div>
@@ -36,32 +36,44 @@
                 </RadzenDataGrid>
             </div>
         </div>
-        <div class="row padding-top">
-            <div class="col-lg-4">
+        <div class="row">
+            <div class="col-lg-4 padding-top">
                 <h3>Entry order id</h3>
                 <RadzenTextBox Value="@TradeOrder.EntryId" />
-                <h3>Entry status</h3>
-                <RadzenTextBox Value="@TradeOrder.EntryStatus" />
-                <h3>SLM order id</h3>
-                <RadzenTextBox Value="@TradeOrder.SLMId" />
-                <h3>SLM status</h3>
-                <RadzenTextBox Value="@TradeOrder.SLMStatus" />
-                <h3>Target order id</h3>
-                <RadzenTextBox Value="@TradeOrder.TargetId" />
-                <h3>Target status</h3>
-                <RadzenTextBox Value="@TradeOrder.TargetStatus" />
-            </div>
-            <div class="col-lg-8">
+                <h3>Entry</h3>
+                <RadzenTextBox Value="@TradeOrder.Entry.ToString()" />
                 <h3>Entry quantity</h3>
                 <RadzenTextBox Value="@TradeOrder.Quantity.ToString()" />
                 <h3>Entry quantity filled</h3>
                 <RadzenTextBox Value="@TradeOrder.QuantityFilled.ToString()" />
-                <h3>Target</h3>
-                <RadzenTextBox Value="@TradeOrder.Target.ToString()" />
+                <h3>Entry status</h3>
+                <RadzenTextBox Value="@TradeOrder.EntryStatus" />
+            </div>
+            <div class="col-lg-4 padding-top">
+                <h3>SLM order id</h3>
+                <RadzenTextBox Value="@TradeOrder.SLMId" />
+                <h3>Stop loss</h3>
+                <RadzenTextBox Value="@TradeOrder.StopLoss.ToString()" />
                 <h3>Is pre slm cancelled</h3>
                 <RadzenTextBox Value="@TradeOrder.PreSLMCancelled.ToString()" />
                 <h3>Is regular slm placed</h3>
                 <RadzenTextBox Value="@TradeOrder.RegularSlmPlaced.ToString()" />
+                <h3>Is slm rejected</h3>
+                <RadzenTextBox Value="@TradeOrder.SlRejected.ToString()" />
+                <h3>SLM status</h3>
+                <RadzenTextBox Value="@TradeOrder.SLMStatus" />
+            </div>
+            <div class="col-lg-4 padding-top">
+                <h3>Target order id</h3>
+                <RadzenTextBox Value="@TradeOrder.TargetId" />
+                <h3>Target</h3>
+                <RadzenTextBox Value="@TradeOrder.Target.ToString()" />
+                <h3>Is target placed</h3>
+                <RadzenTextBox Value="@TradeOrder.TargetPlaced.ToString()" />
+                <h3>Is target hit</h3>
+                <RadzenTextBox Value="@TradeOrder.TargetHit.ToString()" />
+                <h3>Target status</h3>
+                <RadzenTextBox Value="@TradeOrder.TargetStatus" />
             </div>
         </div>
     }
@@ -104,7 +116,7 @@
         await hubConnection.StartAsync();
 
         await GetLogs();
-        await Task.Run(()=>GetOrder()).ConfigureAwait(false);
+        await Task.Run(() => GetOrder()).ConfigureAwait(false);
     }
 
     private async Task GetLogs()
@@ -122,7 +134,6 @@
             await hubConnection.SendAsync("GetOrder", orderId);
             await Task.Delay(5000);
         }
-
     }
 
     public bool IsConnected =>
