--- a/TradeMaster6000/Client/Shared/NavMenu.razor
+++ b/TradeMaster6000/Client/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Order history
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="tickerlogs">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Ticker logs
+            </NavLink>
+        </li>
     </ul>
 </div>
 
