--- a/TradeMaster6000/Client/Shared/NavMenu.razor
+++ b/TradeMaster6000/Client/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Ticker logs
             </NavLink>
         </li>
+        <li class="padding-top"></li>
+        <li class="nav-item">
+            <ApiLoginDisplay />
+        </li>
+
     </ul>
 </div>
 
