--- a/TradeMaster6000/Client/Shared/NavMenu.razor
+++ b/TradeMaster6000/Client/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Components.Authorization
+
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">TradeMaster6000</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -27,9 +29,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Ticker logs
             </NavLink>
         </li>
-        <li class="padding-top"></li>
-        <li class="nav-item">
-            <ApiLoginDisplay />
+        <li class="nav-item fixed-bottom">
+            <AuthorizeView>
+                <Authorized>
+                    <ApiLoginDisplay />
+                </Authorized>
+            </AuthorizeView>
         </li>
 
     </ul>
